  * gdmXnestWrapper: provide a wrapper script for both nested X servers.
    + gdm.install: install it.
    + 56_xnest-wrapper.patch: force its use in configure.ac.
    + 70_mandatory-relibtoolize.patch: refresh configure.
    + Stop build-depending on xserver-xephyr.
  * 35_gdm.conf.patch: set Clearlooks as the default GTK+ theme.

  [ Loic Minier ]
  * Fix tabs versus spaces in gdm.install.

 -- Loic Minier <lool@dooz.org>  Sun, 10 Jun 2007 17:11:20 +0200

gdm (2.18.2-1) unstable; urgency=low

  [ Sam Morris ]
  * Add support for DEB_BUILD_OPTIONS noopt option; closes: #347421.

  [ Loic Minier ]
  * Pass -Wall to CFLAGS too.
  * Build-depend on xserver-xephyr; thanks Sven Arvidsson; closes: #422287.
  * Rework 30_hardcode-standard-x-server and rename to
    59_standard-x-server-detection; update 70_mandatory-relibtoolize.
  * Drop patch 43_clearenv-no-lang as it seems useless -- it only removes a
    function, not calls to this function.
  * New patch, 58_is-local-check-null, checks for NULL ia in
    gdm_is_local_addr6() and gdm_is_local_addr()
  * Drop patch 53_remove-ok-and-cancel-from-included-themes, not needed
    anymore as the buttons work fine.
  * Update patch 58_is-local-check-null with an upstream patch from
    GNOME #436725.

  [ Josselin Mouette ]
  * 35_gdm.conf.patch: add /etc/dm/Sessions/ to the list of directories
    to search for X sessions.

  [ Loic Minier ]
  * New upstream stable release.
    - Refresh patches 42_timed-login, 50_close-fds, 51_misc-env-var-fixes,
      61_gdm-manpage-section, 90_from_svn_fix_gdm_restart to apply cleanly.
    - Drop patches 63_buf-decl, 65_french-translation-typo,
      68_pam-authinfo-unavail, merged upstream.
    - Update relibtoolizing patch, 70_mandatory-relibtoolize.

 -- Loic Minier <lool@dooz.org>  Tue, 29 May 2007 10:47:11 +0200

gdm (2.18.1-2) unstable; urgency=low

  * Fix a packaging mistake introduced while refactoring the install which
    overwrote Debian's /etc/gdm/Xsession with upstream's.