@@ -11,7 +11,12 @@ gdm (2.18.2-2) UNRELEASED; urgency=low
   [ Loic Minier ]
   * Fix tabs versus spaces in gdm.install.
 
- -- Loic Minier <lool@dooz.org>  Sun, 10 Jun 2007 17:11:20 +0200
+  [ Josselin Mouette ]
+  * Move the nested servers to Recommends.
+  * Suggest hibernate instead of apmd.
+  * 35_gdm.conf.patch: use hibernate as the default suspend command.
+
+ -- Josselin Mouette <joss@debian.org>  Mon, 25 Jun 2007 15:45:38 +0200
 
 gdm (2.18.2-1) unstable; urgency=low
 
